# gtagger

./: .gitignore  main.py  pyproject.toml
_spacy/: spacify.py
database/: api.py  default_db.db  default_db.db-shm  default_db.db-wal
database/utils/: dataset.py
gui/: web_gui.py
gui/web/: index.html
spacy2database/: doc2database.py
tiger2database/: tiger2database.py  tigerdocs_parser.py  tigerxml_parser.py
tiger2database/tigerfiles/: README
